checkout page done

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1476,7 +1476,7 @@ img{
     font-weight: 800;
     letter-spacing: .4px;
     text-transform: uppercase;
-    color: var(--hover-color);
+    color: #685a51;
     margin-bottom: -2rem;
 }
 .footerBcontent a{
